# overwatch

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  demo_videos_url.md  pyproject.toml  requirements.txt
docs/: eval_report.md  factorio_report.md  technical_report.md  todo_report.md
evals/factorio_data/: tech_tree_minimal.json
evals/factorio_parser/: manifest.json
evals/factorio_parser/expected/: minimal.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  SearchPanel.tsx  api.ts  index.css
nginx/: nginx.conf
nginx/gateway/: README.txt  nginx.conf
src/overwatch/: __init__.py  config.py  db.py  industry_pipelines.py  main.py  models.py  store.py  vllm_client.py  worker.py
src/overwatch/agents/: __init__.py  compliance_brief.py  incident_brief.py  loss_prevention.py  orchestration.py  perimeter_chain.py  privacy_review.py  risk_review.py  runner.py  (+1 more)
tests/: test_agent_runs_store.py  test_agents_compliance_brief.py  test_agents_incident_brief.py  test_agents_loss_prevention.py  test_agents_perimeter_chain.py  test_agents_privacy_review.py  test_agents_risk_review.py  test_agents_synthesis.py  test_chunks.py  test_factorio_agent.py  test_factorio_capture_meta.py  test_factorio_eval_manifest.py  test_factorio_executor.py  test_factorio_loop.py  test_factorio_planner.py  test_factorio_session.py  test_factorio_state_parser.py  test_factorio_tech_tree.py  test_industry_pipelines.py  test_json_extract.py  test_orchestration.py  test_vllm_image_png_messages.py
(+32 files in other folders)
